<resources>
    <string name="app_name">Пищевые добавки</string>
    <string name="return_label">Вернуться</string>
    <string name="dark_theme_label">Тёмная тема</string>
    <string name="light_theme_label">Светлая тема</string>
    <string name="about_label">О программе</string>
    <string name="e100_e199_label">E100 - E199 Красители</string>
    <string name="e100_e199_meaning">Красители</string>
    <string name="e200_e299_label">E200 - E299 Консерванты</string>
    <string name="e200_e299_meaning">Консерванты</string>
    <string name="e300_e399_label">E300 - E399 Антиоксиданты</string>
    <string name="e300_e399_meaning">Антиоксиданты</string>
    <string name="e400_e499_label">E400 - E499 Стабилизаторы</string>
    <string name="e400_e499_meaning">Стабилизаторы</string>
    <string name="e500_e599_label">E500 - E599 Регуляторы pH</string>
    <string name="e500_e599_meaning">Регуляторы pH</string>
    <string name="e600_e699_label">E600 - E699 Ароматизаторы</string>
    <string name="e600_e699_meaning">Ароматизаторы</string>
    <string name="e700_e799_label">E700 - E799 Антибиотики</string>
    <string name="e700_e799_meaning">Антибиотики</string>
    <string name="e900_e999_label">E900 - E999 Прочие</string>
    <string name="e900_e999_meaning">Прочие</string>
    <string name="e1000_e1999_label">E1000 - E1999 Антифламинги</string>
    <string name="e1000_e1999_meaning">Антифламинги</string>
    <string name="e100_label">E100</string>
    <string name="e101_label">E101</string>
    <string name="e102_label">E102</string>
    <string name="e103_label">E103</string>
    <string name="e104_label">E104</string>
    <string name="e105_label">E105</string>
    <string name="e110_label">E110</string>
    <string name="e120_label">E120</string>
    <string name="e121_label">E121</string>
    <string name="e122_label">E122</string>
    <string name="e123_label">E123</string>
    <string name="e124_label">E124</string>
    <string name="e128_label">E128</string>
    <string name="e129_label">E129</string>
    <string name="e131_label">E131</string>
    <string name="e132_label">E132</string>
    <string name="e133_label">E133</string>
    <string name="e140_label">E140</string>
    <string name="e141_label">E141</string>
    <string name="e142_label">E142</string>
    <string name="e150_label">E150</string>
    <string name="e150d_label">E150d</string>
    <string name="e152_label">E152</string>
    <string name="e153_label">E153</string>
    <string name="e154_label">E154</string>
    <string name="e160a_label">E160a</string>
    <string name="e160b_label">E160b</string>
    <string name="e160c_label">E160c</string>
    <string name="e161b_label">E161b</string>
    <string name="e162_label">E162</string>
    <string name="e163_label">E163</string>
    <string name="e164_label">E164</string>
    <string name="e170_label">E170</string>
    <string name="e171_label">E171</string>
    <string name="e172_label">E172</string>
    <string name="e173_label">E173</string>
    <string name="e174_label">E174</string>
    <string name="e175_label">E175</string>
    <string name="e180_label">E180</string>
    <string name="e181_label">E181</string>
    <string name="e200_label">E200</string>
    <string name="e202_label">E202</string>
    <string name="e210_label">E210</string>
    <string name="e211_label">E211</string>
    <string name="e216_label">E216</string>
    <string name="e217_label">E217</string>
    <string name="e218_label">E218</string>
    <string name="e220_label">E220</string>
    <string name="e222_label">E222</string>
    <string name="e223_label">E223</string>
    <string name="e224_label">E224</string>
    <string name="e225_label">E225</string>
    <string name="e226_label">E226</string>
    <string name="e227_label">E227</string>
    <string name="e230_label">E230</string>
    <string name="e231_label">E231</string>
    <string name="e232_label">E232</string>
    <string name="e234_label">E234</string>
    <string name="e235_label">E235</string>
    <string name="e236_label">E236</string>
    <string name="e239_label">E239</string>
    <string name="e240_label">E240</string>
    <string name="e250_label">E250</string>
    <string name="e252_label">E252</string>
    <string name="e260_label">E260</string>
    <string name="e262_label">E262</string>
    <string name="e270_label">E270</string>
    <string name="e280_label">E280</string>
    <string name="e290_label">E290</string>
    <string name="e296_label">E296</string>
    <string name="e297_label">E297</string>
    <string name="e300_label">E300</string>
    <string name="e301_label">E301</string>
    <string name="e307_label">E307</string>
    <string name="e316_label">E316</string>
    <string name="e320_label">E320</string>
    <string name="e321_label">E321</string>
    <string name="e322_label">E322</string>
    <string name="e325_label">E325</string>
    <string name="e327_label">E327</string>
    <string name="e330_label">E330</string>
    <string name="e331_label">E331</string>
    <string name="e333_label">E333</string>
    <string name="e334_label">E334</string>
    <string name="e336_label">E336</string>
    <string name="e338_label">E338</string>
    <string name="e339_label">E339</string>
    <string name="e340_label">E340</string>
    <string name="e341_label">E341</string>
    <string name="e350_label">E350</string>
    <string name="e363_label">E363</string>
    <string name="e375_label">E375</string>
    <string name="e385_label">E385</string>
    <string name="e388_label">E388</string>
    <string name="e389_label">E389</string>
    <string name="e424_label">E424</string>
    <string name="e425_label">E425</string>
    <string name="e512_label">E512</string>
    <string name="e537_label">E537</string>
    <string name="e557_label">E557</string>
    <string name="e912_label">E912</string>
    <string name="e914_label">E914</string>
    <string name="e916_label">E916</string>
    <string name="e917_label">E917</string>
    <string name="e918_label">E918</string>
    <string name="e919_label">E919</string>
    <string name="e922_label">E922</string>
    <string name="e923_label">E923</string>
    <string name="e925_label">E925</string>
    <string name="e926_label">E926</string>
    <string name="e929_label">E929</string>
    <string name="about_text">В этом приложении вы найдёте список пищевых добавок, запрещённых на территории СНГ, а также их описание.\nE121-E929.\n\nАвтор программы: Ярослав Рыбяк</string>
    <string name="e100_text"><![CDATA[<b>Е100 – Куркумины</b><br /><br />Куркумины (пищевая добавка Е100) — ярко-жёлтые натуральные красители, получаемые из растения куркумы (Curcuma longa). По своей химической природе, куркумины — это полифенолы, которые легко растворяются в спирте и эфире, но совершенно нерастворимы в воде. В щелочном растворе добавка Е100 приобретает буро-красный цвет, в минеральных кислотах краситель Е100 цвет не изменяет. Структура куркумина была определена в 1910 году.<br /><br />В настоящее время краситель Е100 получают путем экстрагирования порошка из корня куркумы петролейным эфиром, а после спиртом. Концентрацию получившегося спиртового экстракта можно регулировать, до требуемого количества красящих веществ. Два самых распространенных вида красителя Е100 — это куркумин (пищевая добавка Е100i), получаемый из чертополоха и других растений рода Curcuma и турмерик (пищевая добавка Е100ii) — порошок корня куркумы. Последний, содержит в себе мелкие частицы жировых клеток, и желатиноподобную крахмалистую массу.<br /><br />Куркумин обладает целым рядом лечебных свойств: противовоспалительным, противоокислительным, противоопухолевым. Лечебные свойства куркумы были известны еще во втором тысячелетии до н.э. Куркума применялась в древней Индии для лечения широкого спектра заболеваний.<br /><br />Противораковое свойство куркуминов проявляется благодаря их способности вызывать естественную смерть раковых клеток, без отрицательного воздействия на здоровые. В 2004-м году были проведены исследования, которые доказали, что куркумин препятствует накоплению бета-амелоидов в мозге людей с болезнью Альцгеймера, и разрушает тромбоциты, вызываемые этой болезнью. Другие исследования показали, что куркумин (пищевая добавка Е100) может восстанавливать функциональное состояние клеток сердца. Эти лечебные свойства куркумина обусловлены возможностью молекул внедряться в мембраны клеток различных органов, делая их устойчивыми к инфекциям.<br /><br />В то же время, не следует забывать, что даже полезные для организма вещества, в больших количествах могут привести к обратному эффекту. Существует предположение, что медицинское применение препаратов, содержащих куркумин во время беременности может привести к выкидышу,  хотя свидетельств таких случаев довольно мало.<br /><br />В настоящее время исследования влияния куркумина на организм человека продолжаются.<br /><br />Благодаря особенности красителя Е100 — окрашивать в жёлтый цвет как растительные, так и животные волокна, куркумин получил широкое распространение в пищевой промышленности, как натуральный краситель, аналогичный искусственным азокрасителям.<br /><br />Куркумины в виде пищевой добавки Е100 используются в качестве красителя при производстве сыров, сливочного масла, горчицы. Обладая горько-жгучим вкусом и слегка камфорным запахом, краситель Е100 широко используется в кондитерской промышленности, при изготовлении ликеров и других алкогольных напитков. Куркумин является основным составляющим в приправе Карри, которая широко используется в странах Восточной Азии, как пряность, добавляемая в рис, овощи, тесто, мясные и рыбные блюда.<br /><br />В некоторых странах куркумин применяется в народной медицине. В Индии — как лекарство от кашля, ревматизма, потери аппетита, а также для лечения растяжений связок, в Китае — для облегчения различных болей в животе.<br /><br />Пищевая добавка Е100 разрешена для применения в пищевой промышленности большинства стран, в том числе России и Украины.]]></string>
</resources>